# pkg-config

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.win32  aclocal.m4  autogen.sh  config.lt  config.status  configure  configure.ac  configure.in  findme.c  index.html  libtool  main.c  params.json  parse.c  parse.h  pkg-config-guide.html  pkg-config.1  pkg-config.in  pkg.c  pkg.h  pkg.m4  pkg.m4.in  popt.c  poptconfig.c  popthelp.c  project.config  rpmvercmp.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
check/: Makefile  Makefile.am  Makefile.in  check-cflags  check-cmd-options  check-debug  check-define-variable  check-duplicate-flags  check-gtk  check-libs  check-missing  check-mixed-flags  check-non-l-flags  check-path  check-print-options  check-relocatable  check-requires-private  check-sort-order  check-special-flags  check-sysroot  check-version  check-whitespace  common  config.sh  config.sh.in  simple.pc  special-flags.pc  whitespace.pc
glib/: Makefile.in  aclocal.m4  configure  configure.ac
glib-patches/: README  acglib.m4.divert_before_help.diff  acinclude.kill.kill.kill.diff  autoconf-warning.diff  automake-warning.diff  config.guess.update.diff  config.sub.update.diff  configure.in-auto-magic.diff  configure.in-fd_set.diff  cross-compiling.patch  depcomp.update.diff  distcheckfix.diff  foreign-automake.patch  glib-only.patch  gmodule_makefile_am_correct_assignment.diff  gstrfuncs_G_GNUC_PRETTY_FUNC_is_a_variable.diff  missing.update.diff  mkinstalldirs.update.diff  no-dist-distclean-files.diff  no-gettext.patch  no-gregex.patch  no-installed-files.patch  no-pkg-config.patch  osx-static-framework.patch  patchlist  pthread-config-fix.diff  remove-strsignal-prototype.diff  static-only.patch  update-glib.sh  win32-static-init.patch
glib/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
glib/glib/: Makefile.am  Makefile.in
glib/glib/gnulib/: Makefile.in
glib/glib/libcharset/: Makefile.in
glib/m4macros/: Makefile.am  Makefile.in
popt/: Makefile.am  popt.c
